# link-cable

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml  contracts.yml  release.yml  security.yml
channels/appstore-connect/: appstore-release.sh  compatibility.yml  install-asc.sh
crates/gear-cable-cli/: Cargo.toml
crates/gear-cable-cli/src/: cli.rs
crates/gear-cable-core/: Cargo.toml
crates/gear-cable-core/src/: plan.rs  policy.rs
crates/gear-cable-dist/: Cargo.toml
crates/gear-cable-dist/src/: lib.rs
crates/link-cable-cli/: Cargo.toml
crates/link-cable-cli/src/: cli.rs  main.rs
crates/link-cable-core/: Cargo.toml
crates/link-cable-core/src/: error.rs  lib.rs  manifest.rs  plan.rs  platform.rs  policy.rs
crates/link-cable-dist/: Cargo.toml
crates/link-cable-dist/src/: lib.rs
docs/adr/: 0001-product-boundary.md  0002-portability-rust-core-bindings.md  0003-forward-only-distribution.md  0004-supply-chain-sovereignty.md  0005-native-bindings-matrix.md  0006-app-store-connect-channel.md  README.md
examples/agent-o-matic/: link-cable.toml
examples/cos-matic/: gear-cable.toml
examples/rumble-ios/appstore/: release.config.json
schemas/: gear-cable.manifest.schema.json  link-cable.manifest.schema.json
scripts/: audit-deps.sh
templates/gitlab/: ios-appstore-connect.yml
