[workspace]
resolver = "3"
members = [
    "crates/gear-cable-core",
    "crates/gear-cable-cli",
    "crates/gear-cable-dist",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/constantin-jais/gear-cable"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
gear-cable-core = { path = "crates/gear-cable-core" }
gear-cable-dist = { path = "crates/gear-cable-dist" }

[profile.release]
strip = true
lto = "thin"
