[package]
name = "gear-cable-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Link Cable distribution planning and doctor checks."

[[bin]]
name = "gear-cable"
path = "src/main.rs"

[dependencies]
clap.workspace = true
gear-cable-core.workspace = true
miette.workspace = true
serde_json.workspace = true
