[package]
name = "gear-cable-dist"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Side-effect boundary for Link Cable distribution channels."

[dependencies]
async-trait.workspace = true
gear-cable-core.workspace = true
serde.workspace = true
thiserror.workspace = true
