[package]
name = "link-cable-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Link Cable distribution planning and doctor checks."

[[bin]]
name = "link-cable"
path = "src/main.rs"

[dependencies]
clap.workspace = true
link-cable-core.workspace = true
miette.workspace = true
serde_json.workspace = true
