[package]
name = "link-cable-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust core for Link Cable release manifests, artifact plans, and policy gates."

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
